# rustamath

./: Cargo.toml  Makefile  README.md  build.rs
benches/: foo_benchmark.rs  polynomial_benchmark.rs
doc_book/: book.toml  plot.bash
doc_book/src/: SUMMARY.md  chapter_1.md
doc_book/src/bench/: polynomial.md
doc_book/src/tools/: polynomial.md
idoc/: ExternalCrates.md  TODO.md
src/: constant.rs  function.rs  la.rs  lib.rs  main.rs  mnmz.rs  physics.rs  polynomial.rs  random.rs  roots.rs  simd.rs
src/constant/: mks.rs  scale.rs
src/constant/mks/: list.rs  value.rs
src/function/: complex.rs
src/la/: tests.rs  tnsr.rs
src/la/solve/: gauss_jordan.rs
src/la/tnsr/: matrix.rs  order.rs  tensor.rs  tests.rs  trait_matrix.rs  trait_tensor.rs  trait_transp_matrix.rs  trait_vector.rs  transp_matrix.rs  vector.rs
src/la/tnsr/matrix/: transpose.rs
src/mnmz/: bracket.rs  golden_section.rs
src/physics/: equations.rs  figure.rs  regression.rs
src/physics/figure/: circle.rs  rectangle.rs
src/physics/mechanics/: linear_motion.rs
src/physics/mechanics/linear_motion/: const_accel.rs  tests.rs
src/polynomial/: roots.rs
src/random/: lottery.rs  quality.rs
src/roots/: bisection.rs  itp.rs  tests.rs
src/simd/: noarch.rs  x86.rs  x86_avx2.rs
src/simd/x86/: avx2.rs  avx512.rs
