[package]
name = "rustomath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "polynomial_benchmark"
harness = false

[[bench]]
name = "foo_benchmark"
harness = false
