[package]
name = "rustamath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_float_eq = "1"
clap = { version = "4.1.8", features = ["derive"] }

[dev-dependencies]
criterion = "0.4"

[[bin]]
path = "src/bin/polynomial.rs"
name = "rustamath-polynomial"

[[bin]]
path = "src/bin/lottery.rs"
name = "rustamath-lottery"

[[bench]]
name = "polynomial_benchmark"
harness = false

[[bench]]
name = "foo_benchmark"
harness = false
