[package]
name = "rustamath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
num-traits = { version = "0.2", default-features = true}
assert_float_eq = "1"
maligned = "0.2.1"
clap = { version = "4.1.8", features = ["derive"] }
inquire = "0.6"
#plotters = "0.3"

[dev-dependencies]
criterion = "0.4"

[[bin]]
path = "src/bin/polynomial.rs"
name = "rustamath-polynomial"

[[bin]]
path = "src/bin/lottery.rs"
name = "rustamath-lottery"

[[bench]]
name = "polynomial_benchmark"
harness = false

[[bench]]
name = "foo_benchmark"
harness = false
